--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Rubik+Mono+One&family=Sansita&family=Squada+One&display=swap" rel="stylesheet">
-    <title>Vite App</title>
+    <title>JBC</title>
   </head>
   <body>
     <div id="app"></div>
